--- a/package.json
+++ b/package.json
@@ -9,10 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
+    "axios": "^1.7.2",
     "expo": "~51.0.18",
+    "expo-camera": "~15.0.13",
+    "expo-document-picker": "~12.0.2",
+    "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.7",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
+    "geolib": "^3.3.4",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
